2010-05-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Added an alternative expose
	  buffering system to hack around GTK 2.20 issues on Mac.

2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextEditorData.cs: Check the IsVisible flag
	  for margins.

2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Fixed 'Bug 603274 - Caret
	  is moved to incorrect position when typing'.

2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/EditMode.cs: Fixed editor bug.

2010-05-06  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor.csproj: Disable overflow checks.

2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Removed adjustment update on
	  scroll to caret.

2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fixed 'Bug 603110 - Margin
	  doesn't redraw after damaged'.

2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fixed 'Bug 603117 -
	  Drag-selection is slow on large file'.

2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/ISearchEngine.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/TextEditorData.cs: Optimized search
	  highlighting updates.

2010-05-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Track GTK mouse modifier
	  changes on Mac. Now block selection could be cmd or control,
	  depending on GTK version.

2010-05-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fix cmd-scroll zoom on Mac.
	  Use more conventional direction for zooming.

2010-05-05  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Add some (disabled) debug
	  code.

2010-05-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Made scrolling faster.
